duniverse/lwt/test/ppx_expect/cases/try_3.expect
File "try_3.ml", line 4, characters 12-24:
Error: This expression has type int Lwt.t
       but an expression was expected of type unit Lwt.t
       Type int is not compatible with type unit 
