duniverse/lwt/test/ppx_expect/cases/try_3.ml
let _ =
  try%lwt
    Lwt.return ()
  with _ -> Lwt.return 5;;
